--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <!doctype html>
 <html lang="en">
 
-<header>
+<head>
+    <meta charset="utf-8">
+    <title>Beats on Peat</title>
+    <meta name="description" content="Beats on Peat is an Music and Arts festival held in Ballindurrow Bog, Multyfarnham, Ireland." >
+    <meta name="author" content="Eoin Lynch" >
 
-</header>
+    <link rel="stylesheet" href="css/index.css">
+</head>
 
 <body>
 
